# it-jobs-meta

./: .dockerignore  .gitignore  LICENSE  README.md  deploy  docker-compose.yml  dockerfile  lambda.dockerfile  main.tf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test.ipynb
.github/workflows/: python-app.yml  quality_checks.yml
analysis/: requirements.txt
analysis/.ipynb_checkpoints/: data_exploration-checkpoint.ipynb
config/: db_config_mongo.yaml  mariadb_config.yaml  redis_config.yaml  s3_bucket_config.yaml  warehouse_db_config.yaml
dashboard/: __init__.py  dashboard.py  dashboard_components.py
dashboard/assets/: styles.css
data_pipeline/: __init__.py  data_ingestion.py  data_pipeline.py  data_warehouse.py
data_pipeline/config/: warehouse_db_config.yaml
data_pipeline/test/: test_data_ingestion.py  test_data_warehouse.py
data_processing/: data_formats.py  data_ingestion.py  data_lake.py  data_lake_db_config.yaml  data_validation.py  data_warehouse.py  geolocator.py  run_data_pipeline.py  test_data_ingestion.py  test_data_warehouse.py  warehouse_db_config.yaml
data_processing/test/: fetch_sample_dataset.py  test_data_ingestion.py  test_data_warehouse.py
deployment/: README.md  ansible.cfg  backend.tf  deploy  it_jobs_meta_vars.yml  main.tf  networking.tf  outputs.tf  permissions.tf  playbook.yml  variables.tf
deployment/services/: it-jobs-meta-dashboard.service  it-jobs-meta-pipeline.service
infrastructure/: dockerfile
it_jobs_meta/: __main__.py  app.py  cli.py
scripts/: install_app  install_deps
(+28 files in other folders)
