[metadata]
name = it-jobs-meta

[options]
packages = find:
install_requires =
    dash
    dash-bootstrap-components
    flask-caching
    geopy
    numpy
    pandas
    pandera
    pymysql
    pyyaml
    redis
    requests
    sklearn
    sqlalchemy
    typer

[options.entry_points]
console_scripts =
    it-jobs-meta = it_jobs_meta.__main__:main
