[metadata]
name = it-jobs-meta

[options]
packages = find:
install_requires =
    boto3
    croniter
    dash
    dash-bootstrap-components
    flask-caching
    geopy
    numpy
    pandas
    pandera
    pymongo
    pymysql
    pyyaml
    redis
    requests
    sklearn
    sqlalchemy
    waitress

[options.entry_points]
console_scripts =
    it-jobs-meta = it_jobs_meta.__main__:main
