[metadata]
name = it-jobs-meta
version = attr: it_jobs_meta.__version__
description = data pipeline and meta-analysis dashboard for IT job postings
long_description = file: README.md
platform = posix
license = confidential

[options]
python_requires = >=3.10
include_package_data = True
packages = find:
install_requires =
    boto3
    croniter
    dash
    dash-bootstrap-components
    flask-caching
    geopy
    numpy
    pandas
    pandera
    pymongo
    pymysql
    pyyaml
    redis
    requests
    sklearn
    sqlalchemy
    waitress

[options.package_data]
it_jobs_meta = dashboard/assets/*.css

[options.entry_points]
console_scripts =
    it-jobs-meta = it_jobs_meta.__main__:main
